[package]
name = "deano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serenity = { version = "0.11" }
anyhow = "1.0"
regex = "1.6"
